# MarketMatrix

./: .env.example  .gitignore  Dockerfile  README.md  connect.py  docker-compose.yml  fetch_token.py  pyproject.toml  recipients.txt  requirements.txt
tests/: test_fair_value_gap.py  test_liquidity_sweep.py  test_market_structure.py  test_signal_aggregator.py  test_volume_profile.py
trading_system/: __init__.py  main.py  requirements.txt
trading_system/api/: app.py
trading_system/backtesting/: engine.py
trading_system/config/: settings.py
trading_system/core/: cache.py  database.py  migrations.py  models.py  schemas.py
trading_system/data/: candle_aggregator.py  smartapi_client.py  symbol_manager.py
trading_system/engines/: __init__.py  anchored_vwap.py  fair_value_gap.py  liquidity_sweep.py  market_structure.py  multi_timeframe_confluence.py  order_flow.py  signal_aggregator.py  volume_profile.py
trading_system/notifications/: email.py  telegram.py
trading_system/utils/: helpers.py
